--- a/admin.html
+++ b/admin.html
@@ -43,15 +43,16 @@
                     <label for="date">Date</label>
                     <input type="date" id="date" required>
                 </div>
-                <div class="form-group">
-                    <label for="difficulte">⛰️ Difficulté</label>
-                    <select id="difficulte">
-                        <option value="Facile">Facile</option>
-                        <option value="Moyen" selected>Moyen</option>
-                        <option value="Difficile">Difficile</option>
-                        <option value="Expert">Expert</option>
-                    </select>
-                </div>
+<div class="row">
+    <div class="form-group">
+        <label for="date">Date</label>
+        <input type="date" id="date" required>
+    </div>
+    <div class="form-group">
+        <label for="nombre_participants">👥 Participants</label>
+        <input type="number" id="nombre_participants" placeholder="ex: 3" required>
+    </div>
+</div>
             </div>
 
             <div class="row">
@@ -103,7 +104,7 @@
             const nouvelleRando = {
                 titre: document.getElementById('titre').value,
                 date: document.getElementById('date').value,
-                difficulte: document.getElementById('difficulte').value,
+                nombre_participants: document.getElementById('nombre_participants').value,
                 distance: document.getElementById('distance').value ? parseFloat(document.getElementById('distance').value) : null,
                 denivele: document.getElementById('denivele').value ? parseInt(document.getElementById('denivele').value) : null,
                 description: document.getElementById('description').value,
