--- a/equipe.html
+++ b/equipe.html
@@ -71,7 +71,7 @@
 <body>
 
     <div class="container">
-    <header><h1>Randocool</h1></header>
+    <header><h1>L'équipe</h1></header>
     <nav>
         <a href="index.html">ACCUEIL</a>
         <a href="archives.html">ARCHIVES</a>
