--- a/archives.html
+++ b/archives.html
@@ -66,7 +66,7 @@
                     <div style="margin-bottom:12px; display: flex; flex-wrap: wrap; gap: 4px;">
                         <span class="badge badge-part">👥 ${item.nombre_participants || 0}</span>
                         ${item.distance ? `<span class="badge badge-dist">📏 ${item.distance}km</span>` : ''}
-                        ${item.denivele ? `<span class="badge badge-deniv">🧗 ${item.denivele}m</span>` : ''}
+                        ${item.denivele ? `<span class="badge badge-deniv">📈 ${item.denivele}m</span>` : ''}
                     </div>
                     <h3 style="margin:0 0 10px 0">${item.titre}</h3>
                     <p style="font-size:0.85em; color:var(--grey); line-height:1.5;">
