--- a/modifier.html
+++ b/modifier.html
@@ -26,7 +26,7 @@
              <div class="form-group"><label>Participants</label><input type="number" id="nombre_participants">
             <div class="form-group"><label>Distance (km)</label><input type="number" id="distance" step="any">
             <div class="form-group"><label>Dénivelé (m)</label><input type="number" id="denivele" step="any">
-            <div class="form-group"><label>Description</label><textarea id="description"></textarea></div>
+            <div class="form-group"><label>Description</label><textarea id="description" rows="15"></textarea></div>
             <div class="form-group"><label>URL Image</label><input type="url" id="image_url"></div>
             <div class="form-group"><label>URL Album</label><input type="url" id="album_url"></div>
             <button type="submit">Enregistrer les modifications</button>
