--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
 
         input#search { width: 100%; padding: 15px; border-radius: 12px; border: 1px solid #ddd; margin-bottom: 30px; font-size: 1em; }
         @media (max-width: 1100px) { .main-grid { grid-template-columns: 1fr; } }
+		.btn-add-actu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    background-color: #3498db; /* Bleu */
+    color: white !important;
+    text-decoration: none;
+    border-radius: 50%;
+    font-weight: bold;
+    font-size: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+.btn-add-actu:hover {
+    background-color: #2980b9;
+    transform: scale(1.1);
+}
     </style>
 </head>
 <body>
@@ -43,7 +63,14 @@
     </nav>
     <input type="text" id="search" placeholder="Rechercher..." oninput="rechercher()">
     <div id="zone-randos" class="main-grid">
-        <div class="col-actus" id="col-actus"><h2>Autres Actus</h2></div>
+<div class="col-actus">
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+        <h2 style="margin: 0;">Autres Actus</h2>
+        <a href="admin_actus.html" class="btn-add-actu" title="Ajouter une actualité">＋</a>
+    </div>
+    <div id="col-actus-content">
+        </div>
+</div>
         <div id="content-principal"></div>
         <div class="col-feed" id="col-feed"><h2>Dernières marches</h2><div id="feed-area"></div></div>
     </div>
@@ -56,18 +83,28 @@
 
     async function initialiser() { chargerActus(); chargerRandos(); }
 
-    async function chargerActus() {
-        const { data } = await supabaseClient.from('actus').select('*').order('date', { ascending: false });
-        if (data) {
-            document.getElementById('col-actus').innerHTML = `<h2>Autres Actus</h2>` + data.map(a => `
-                <div class="actu-card">
-                    <div style="font-size:0.75em; color:var(--primary); font-weight:bold;">📅 ${new Date(a.date).toLocaleDateString('fr-FR')}</div>
-                    <h3 style="margin:5px 0; font-size:1em;">${a.description}</h3>
-                    <p style="font-size:0.85em; color:var(--grey); line-height:1.4;">${a.description || a.contenu || ''}</p>
-                    ${a.album_url ? `<a href="${a.album_url}" target="_blank" style="font-size:0.8em; color:var(--primary); font-weight:bold; text-decoration:none;">📸 Album</a>` : ''}
-                </div>`).join('');
-        }
+async function chargerActus() {
+    const { data } = await supabaseClient
+        .from('actus')
+        .select('*')
+        .order('date', { ascending: false });
+
+    // On cible le contenu et non le parent pour garder le titre et le bouton +
+    const container = document.getElementById('col-actus-content');
+    
+    if (data && container) {
+        container.innerHTML = data.map(a => `
+            <div class="actu-card" style="padding: 0; overflow: hidden; display: flex; flex-direction: column; margin-bottom:15px; background:white; border:1px solid #ddd; border-radius:8px;">
+                ${a.photo_url ? `<img src="${a.photo_url}" style="width: 100%; height: 120px; object-fit: cover;">` : ''}
+                <div style="padding: 12px;">
+                    <div style="font-size: 0.7em; color: var(--primary); font-weight: bold;">📅 ${new Date(a.date).toLocaleDateString('fr-FR')}</div>
+                    <p style="font-size: 0.85em; margin: 8px 0;">${a.description}</p>
+                    ${a.lien ? `<a href="${a.lien}" target="_blank" style="font-size: 0.8em; color: var(--primary); font-weight: bold; text-decoration: none;">🔗 Voir le lien</a>` : ''}
+                </div>
+            </div>
+        `).join('');
     }
+}
 
     async function chargerRandos() {
         const { data } = await supabaseClient.from('randos').select('*').order('date', { ascending: false });
@@ -91,7 +128,7 @@
                         <div style="margin-bottom:15px">
                             <span class="badge badge-part">👥 ${une.nombre_participants || 0} participants</span>
                             ${une.distance ? `<span class="badge badge-dist">📏 ${une.distance} km</span>` : ''}
-                            ${une.denivele ? `<span class="badge badge-deniv">🧗 ${une.denivele} m</span>` : ''}
+                            ${une.denivele ? `<span class="badge badge-deniv">📈 ${une.denivele} m</span>` : ''}
                         </div>
                         <h2>${une.titre}</h2>
                         <p>Le ${new Date(une.date).toLocaleDateString('fr-FR')} <a href="modifier.html?id=${une.id}" style="text-decoration:none; color:var(--primary); font-weight:bold;">⚙️ ÉDITER</a></p>
@@ -106,7 +143,7 @@
                         <div style="margin-bottom:8px; display: flex; flex-wrap: wrap; gap: 4px;">
                             <span class="badge badge-part" style="font-size:0.6em; padding:2px 5px;">👥 ${item.nombre_participants || 0}</span>
                             ${item.distance ? `<span class="badge badge-dist" style="font-size:0.6em; padding:2px 5px;">📏 ${item.distance}k</span>` : ''}
-                            ${item.denivele ? `<span class="badge badge-deniv" style="font-size:0.6em; padding:2px 5px;">🧗 ${item.denivele}m</span>` : ''}
+                            ${item.denivele ? `<span class="badge badge-deniv" style="font-size:0.6em; padding:2px 5px;">📈 ${item.denivele}m</span>` : ''}
                         </div>
                         <h3 style="margin:0; font-size:1em;">${item.titre}</h3>
                         <div style="display:flex; justify-content:space-between; margin-top:8px;">
