--- a/archives.html
+++ b/archives.html
@@ -62,7 +62,10 @@
             parAnnee[annee].map(item => `
             <div class="card">
                 <img src="${item.image_url || 'https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?w=500'}" style="width:100%; height:180px; object-fit:cover;">
-                <div class="card-body">
+				<div class="card-header">
+            <span class="Date">📅 ${date}</span>
+        </div>
+				<div class="card-body">
                     <div style="margin-bottom:12px; display: flex; flex-wrap: wrap; gap: 4px;">
                         <span class="badge badge-part">👥 ${item.nombre_participants || 0}</span>
                         ${item.distance ? `<span class="badge badge-dist">📏 ${item.distance}km</span>` : ''}
@@ -88,4 +91,5 @@
     charger();
 </script>
 </body>
+
 </html>
