--- a/admin.html
+++ b/admin.html
@@ -3,146 +3,295 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nouvelle Marche | Randocool</title>
+    <title>Admin | Randocool</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
-        :root { --primary: #27ae60; --bg: #f8fafc; --dark: #1e293b; }
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background: var(--bg); padding: 20px; color: var(--dark); }
-        .form-container { max-width: 800px; margin: 0 auto; background: white; padding: 35px; border-radius: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
-        h1 { font-weight: 800; color: var(--primary); border-bottom: 2px solid #f1f5f9; padding-bottom: 15px; margin-bottom: 30px; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-        .full { grid-column: span 2; }
-        label { display: block; font-weight: 700; font-size: 0.85rem; margin-bottom: 8px; color: #64748b; text-transform: uppercase; }
-        input, textarea { width: 100%; padding: 12px; border-radius: 12px; border: 1px solid #e2e8f0; font-family: inherit; box-sizing: border-box; }
-        .participants-grid { 
-            display: grid; grid-template-columns: repeat(auto-fill, minmax(230px, 1fr)); 
-            gap: 12px; background: #f8fafc; padding: 20px; border-radius: 16px; margin-top: 10px;
+        :root {
+            --primary: #10b981;
+            --primary-dark: #059669;
+            --bg-dark: #0f172a;
+            --surface: #ffffff;
+            --text-main: #1e293b;
+            --text-light: #64748b;
+            --glass-bg: rgba(15, 23, 42, 0.85);
         }
-        .member-item { display: flex; align-items: center; gap: 10px; background: white; padding: 10px; border-radius: 10px; border: 1px solid #edf2f7; }
-        .btn-submit { width: 100%; padding: 18px; background: var(--primary); color: white; border: none; border-radius: 15px; font-weight: 800; cursor: pointer; margin-top: 30px; }
+
+        body {
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            margin: 0;
+            height: 100vh;
+            background: var(--bg-dark);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        /* Ambiance visuelle */
+        .bg-glow {
+            position: fixed;
+            width: 450px; height: 450px;
+            background: var(--primary);
+            filter: blur(160px);
+            opacity: 0.15;
+            z-index: 0;
+            top: -100px; right: -100px;
+        }
+
+        .overlay {
+            position: fixed;
+            inset: 0;
+            backdrop-filter: blur(25px);
+            background: var(--glass-bg);
+            z-index: 1;
+        }
+
+        /* Fenêtre Modale */
+        .modal {
+            position: relative;
+            z-index: 2;
+            width: 90%;
+            max-width: 520px;
+            background: var(--surface);
+            border-radius: 35px;
+            box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.6);
+            max-height: 85vh;
+            display: flex;
+            flex-direction: column;
+            animation: modalAppear 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        @keyframes modalAppear {
+            from { opacity: 0; transform: scale(0.95) translateY(30px); }
+            to { opacity: 1; transform: scale(1) translateY(0); }
+        }
+
+        .modal-header {
+            padding: 24px 32px;
+            border-bottom: 1px solid #f1f5f9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .modal-header h2 {
+            margin: 0; font-size: 1.3rem; font-weight: 800; color: var(--bg-dark);
+        }
+
+        .close-btn {
+            text-decoration: none; color: var(--text-light);
+            font-size: 1.8rem; line-height: 1; transition: 0.2s;
+        }
+        .close-btn:hover { color: var(--primary); }
+
+        .modal-content {
+            padding: 0 32px 32px 32px;
+            overflow-y: auto;
+            flex: 1;
+        }
+
+        .form-section-title {
+            font-size: 0.7rem; font-weight: 800; color: var(--primary);
+            text-transform: uppercase; letter-spacing: 1.2px;
+            margin: 30px 0 15px 0;
+        }
+
+        .input-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
+        .field { display: flex; flex-direction: column; gap: 6px; }
+        .field.full { grid-column: span 2; }
+
+        label { font-size: 0.75rem; font-weight: 700; color: var(--text-main); }
+
+        input, textarea {
+            padding: 12px 16px; border-radius: 14px; border: 1px solid #e2e8f0;
+            background: #f8fafc; font-family: inherit; font-size: 0.9rem; transition: 0.2s;
+        }
+
+        input:focus {
+            outline: none; border-color: var(--primary); background: #fff;
+            box-shadow: 0 0 0 4px rgba(16, 185, 129, 0.1);
+        }
+
+        /* Participants Design */
+        .participants-list { display: flex; flex-direction: column; gap: 10px; }
+
+        .participant-row {
+            display: flex; align-items: center; padding: 12px 16px;
+            background: #f8fafc; border-radius: 18px; border: 1px solid transparent;
+            transition: 0.2s; cursor: pointer; user-select: none;
+        }
+
+        .participant-row:hover { background: #f1f5f9; transform: translateX(5px); }
+        .participant-row.active { background: #ecfdf5; border-color: var(--primary); }
+
+        .avatar {
+            width: 40px; height: 40px; border-radius: 50%;
+            margin-right: 14px; object-fit: cover;
+            border: 2px solid white; box-shadow: 0 3px 6px rgba(0,0,0,0.08);
+        }
+
+        .participant-info { flex: 1; }
+        .participant-name { display: block; font-size: 0.9rem; font-weight: 700; color: var(--text-main); }
+        .participant-km { font-size: 0.65rem; color: var(--text-light); font-weight: 500; }
+
+        .toggle-small {
+            background: white; padding: 5px 12px; border-radius: 20px;
+            font-size: 0.6rem; font-weight: 800; color: var(--text-light);
+            border: 1px solid #e2e8f0; display: flex; align-items: center; gap: 6px;
+        }
+        .participant-row.active .toggle-small { border-color: var(--primary); color: var(--primary); }
+
+        /* Autres boutons */
+        .btn-others {
+            text-align: center; color: var(--primary); font-size: 0.75rem;
+            font-weight: 800; cursor: pointer; padding: 12px;
+            margin-top: 15px; border: 2px dashed #e2e8f0; border-radius: 15px; transition: 0.2s;
+        }
+        .btn-others:hover { background: #f0fdf4; border-color: var(--primary); }
+
+        .modal-footer {
+            padding: 24px 32px; background: #f8fafc;
+            border-top: 1px solid #f1f5f9; border-radius: 0 0 35px 35px;
+        }
+
+        .btn-submit {
+            width: 100%; padding: 18px; background: var(--primary);
+            color: white; border: none; border-radius: 18px;
+            font-weight: 700; font-size: 1rem; cursor: pointer;
+            box-shadow: 0 10px 20px rgba(16, 185, 129, 0.25); transition: 0.3s;
+        }
+        .btn-submit:hover { background: var(--primary-dark); transform: translateY(-2px); }
+
+        /* Scrollbar */
+        .modal-content::-webkit-scrollbar { width: 4px; }
+        .modal-content::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
     </style>
 </head>
 <body>
 
-<div class="form-container">
-    <h1>🏔️ Enregistrer une marche</h1>
-    <form id="marche-form">
-        <div class="grid">
-            <div class="form-group full">
-                <label>Titre de la randonnée</label>
-                <input type="text" id="titre" required>
-            </div>
-            <div class="form-group">
-                <label>Date</label>
-                <input type="date" id="date" required>
-            </div>
-            <div class="form-group">
-                <label>Dénivelé (m)</label>
-                <input type="number" id="denivele">
-            </div>
-            <div class="form-group">
-                <label>Distance Normale (km)</label>
-                <input type="number" step="0.1" id="distance" required>
-            </div>
-            <div class="form-group">
-                <label>Distance "Petit Parcours" (km)</label>
-                <input type="number" step="0.1" id="small_distance">
-            </div>
-            <div class="form-group">
-                <label>Lien Image Couverture (image_url)</label>
-                <input type="url" id="image_url" placeholder="https://...">
-            </div>
-            <div class="form-group">
-                <label>Lien Album Photos (album_url)</label>
-                <input type="url" id="album_url" placeholder="Lien Google Photos">
-            </div>
-            <div class="form-group full">
-                <label>Récit / Description</label>
-                <textarea id="description" rows="3"></textarea>
-            </div>
-        </div>
+<div class="bg-glow"></div>
+<div class="overlay"></div>
 
-        <h3 style="margin-top:30px; font-size: 1rem;">Participants</h3>
-        <div id="participants-list" class="participants-grid">
-            <p>Chargement des membres...</p>
-        </div>
+<div class="modal">
+    <div class="modal-header">
+        <h2>Nouvelle Aventure</h2>
+        <a href="index.html" class="close-btn">&times;</a>
+    </div>
 
-        <button type="submit" class="btn-submit">PUBLIER ET CRÉDITER LES KM</button>
-    </form>
+    <div class="modal-content">
+        <form id="marche-form">
+            <div class="form-section-title">Parcours</div>
+            <div class="input-grid">
+                <div class="field full"><label>Titre</label><input type="text" id="titre" placeholder="Nom de la rando" required></div>
+                <div class="field"><label>Date</label><input type="date" id="date" required></div>
+                <div class="field"><label>Dénivelé (m)</label><input type="number" id="denivele" placeholder="D+"></div>
+                <div class="field"><label>Distance (km)</label><input type="number" step="0.1" id="distance" placeholder="10.5" required></div>
+                <div class="field"><label>Distance petite marche (km)</label><input type="number" step="0.1" id="small_distance" placeholder="5"></div>
+            </div>
+
+            <div class="form-section-title">Médias</div>
+            <div class="input-grid">
+                <div class="field full"><label>URL Image</label><input type="url" id="image_url" placeholder="https://..."></div>
+                <div class="field full"><label>Lien Album</label><input type="url" id="album_url" placeholder="Google Photos"></div>
+            </div>
+
+            <div class="form-section-title">Équipe présente</div>
+            <div id="participants-list" class="participants-list">
+                </div>
+        </form>
+    </div>
+
+    <div class="modal-footer">
+        <button type="submit" form="marche-form" class="btn-submit">Publier la rando</button>
+    </div>
 </div>
 
 <script>
-        const SUPABASE_URL = 'https://mdpzwevznroqkpnobbag.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1kcHp3ZXZ6bnJvcWtwbm9iYmFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg3OTM1MjEsImV4cCI6MjA4NDM2OTUyMX0.ISXEl1Lf-jKMW1BUKnu02wcjs1veZ9Os9kmJcJCmwG4';
-        const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const SUPABASE_URL = 'https://mdpzwevznroqkpnobbag.supabase.co';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1kcHp3ZXZ6bnJvcWtwbm9iYmFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg3OTM1MjEsImV4cCI6MjA4NDM2OTUyMX0.ISXEl1Lf-jKMW1BUKnu02wcjs1veZ9Os9kmJcJCmwG4';
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     async function chargerMembres() {
-        const { data: membres } = await supabaseClient.from('randocooleurs').select('id, nom').order('nom');
+        const { data: membres } = await supabaseClient
+            .from('randocooleurs')
+            .select('id, nom, photo_url, km, type')
+            .order('km', { ascending: false });
+
         const list = document.getElementById('participants-list');
-        if (membres) {
-            list.innerHTML = membres.map(m => `
-                <div class="member-item">
-                    <input type="checkbox" class="is-present" data-id="${m.id}">
-                    <span style="flex:1; font-size:0.85rem; font-weight:600;">${m.nom}</span>
-                    <label style="font-size:0.65rem; color:var(--primary); font-weight:800;">
-                        <input type="checkbox" class="is-small" data-id="${m.id}"> PETIT
-                    </label>
+        if (!membres) return;
+
+        const actifs = membres.filter(m => m.type === 'Dictateur' || m.type === 'Marcheur');
+        const anciens = membres.filter(m => m.type === 'Ancien membre');
+
+        let html = actifs.map(m => generateRow(m)).join('');
+
+        if (anciens.length > 0) {
+            html += `
+                <div id="btn-show-anciens" class="btn-others" onclick="showAnciens()">+ AUTRES (ANCIENS MEMBRES)</div>
+                <div id="anciens-block" class="participants-list" style="display:none; margin-top:10px;">
+                    ${anciens.map(m => generateRow(m)).join('')}
                 </div>
-            `).join('');
+            `;
         }
+        list.innerHTML = html;
+    }
+
+    function generateRow(m) {
+        return `
+            <div class="participant-row" onclick="toggleParticipant(this)">
+                <input type="checkbox" class="is-present" data-id="${m.id}" style="display:none">
+                <img src="${m.photo_url || 'https://ui-avatars.com/api/?background=random&name='+m.nom}" class="avatar">
+                <div class="participant-info">
+                    <span class="participant-name">${m.nom}</span>
+                    <span class="participant-km">${Math.round(m.km || 0)} km au compteur</span>
+                </div>
+                <div class="toggle-small" onclick="event.stopPropagation()">
+                    <input type="checkbox" class="is-small" data-id="${m.id}"> PETIT
+                </div>
+            </div>
+        `;
+    }
+
+    function showAnciens() {
+        document.getElementById('anciens-block').style.display = 'flex';
+        document.getElementById('btn-show-anciens').style.display = 'none';
+    }
+
+    function toggleParticipant(row) {
+        const cb = row.querySelector('.is-present');
+        cb.checked = !cb.checked;
+        row.classList.toggle('active', cb.checked);
     }
 
     document.getElementById('marche-form').addEventListener('submit', async (e) => {
         e.preventDefault();
-        
-        // Récupération des valeurs numériques
-        const dNormale = parseFloat(document.getElementById('distance').value) || 0;
-        const dPetite = parseFloat(document.getElementById('small_distance').value || 0);
+        const dNorm = parseFloat(document.getElementById('distance').value);
+        const dSmall = parseFloat(document.getElementById('small_distance').value || 0);
 
-        // A. Création dans la table 'randos'
         const { data: marche, error: mErr } = await supabaseClient.from('randos').insert([{
             titre: document.getElementById('titre').value,
             date: document.getElementById('date').value,
-            distance: dNormale,
-            small_distance: dPetite,
+            distance: dNorm,
+            small_distance: dSmall,
             denivele: parseInt(document.getElementById('denivele').value || 0),
-            description: document.getElementById('description').value,
             image_url: document.getElementById('image_url').value,
             album_url: document.getElementById('album_url').value
         }]).select();
 
-        if (mErr) {
-            console.error(mErr);
-            alert("Erreur Supabase : " + mErr.message);
-            return;
-        }
+        if (mErr) return alert("Erreur");
 
-        const marcheId = marche[0].id;
         const presents = document.querySelectorAll('.is-present:checked');
-
-        // B. Traitement des participations et mise à jour des KM
         for (let p of presents) {
-            const membreId = p.dataset.id;
-            const aFaitPetit = document.querySelector(`.is-small[data-id="${membreId}"]`).checked;
-            const kmGagnes = aFaitPetit ? dPetite : dNormale;
+            const mId = p.dataset.id;
+            const isSmall = document.querySelector(`.is-small[data-id="${mId}"]`).checked;
+            const gain = isSmall ? dSmall : dNorm;
 
-            // 1. Log participation
-            await supabaseClient.from('participations').insert([{
-                marche_id: marcheId,
-                membre_id: membreId,
-                a_fait_petit_parcours: aFaitPetit
-            }]);
-
-            // 2. Mise à jour compteur membre
-            const { data: mData } = await supabaseClient.from('randocooleurs').select('km').eq('id', membreId).single();
-            const nouveauTotal = (parseFloat(mData.km) || 0) + kmGagnes;
-
-            await supabaseClient.from('randocooleurs').update({ km: nouveauTotal }).eq('id', membreId);
+            await supabaseClient.from('participations').insert([{ marche_id: marche[0].id, membre_id: mId, a_fait_petit_parcours: isSmall }]);
+            const { data: mData } = await supabaseClient.from('randocooleurs').select('km').eq('id', mId).single();
+            await supabaseClient.from('randocooleurs').update({ km: (parseFloat(mData.km) || 0) + gain }).eq('id', mId);
         }
-
-        alert("Succès ! La marche et les compteurs kilométriques ont été mis à jour.");
-        window.location.reload();
+        window.location.href = "index.html";
     });
 
     chargerMembres();
